--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
-<div class="modificado"></div>
-
-
+    <script src="script/script.js"></script>
 </body>
 </html>
